--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,23 @@
       padding: 0;
       overflow: hidden;
     }
+
+    div {
+      width: 5%;
+      height: 5%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    button {
+      height: 100%;
+      width: 100%;
+    }
     
   </style>
 </head>
 <body>
-  <p>who cares</p>
+  <div><button type="button">???</button></div>
+  <script src="/hit/index.js"></script>
 </body>
