--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,13 @@
     * {
       margin: 0;
       padding: 0;
+      
       width: 100%;
       height: 100%;
+      
       position: absolute;
+
+      user-select: none;
     }
 
     div {
