--- a/index.htm
+++ b/index.htm
@@ -24,6 +24,11 @@
       transform: translate(-50%, -50%);
     }
 
+    img {
+      width: 20px;
+      height: 20px;
+    }
+
     .cutoff {
       overflow: hidden;
     }
@@ -35,6 +40,6 @@
   </style>
 </head>
 <body>
-  <div><button type="button">???</button></div>
+  <div><div class="cutoff" id="button-cutoff"><button type="button">???</button></div></div>
   <script src="/hit/index.js"></script>
 </body>
