--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
       user-select: none;
     }
 
-    div {
+    #button-positioner {
       width: 5%;
       height: 5%;
       
@@ -40,6 +40,6 @@
   </style>
 </head>
 <body>
-  <div><div class="cutoff" id="button-cutoff"><button type="button">???</button></div></div>
+  <div id="button-positioner"><div class="cutoff" id="button-cutoff"><button type="button">???</button></div></div>
   <script src="/hit/index.js"></script>
 </body>
